Uploaded New dogloaf site
uploaded new dog loaf site

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>HTML & CSS Boilerplate</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic|Slabo+27px' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
     <link rel='stylesheet' href='styles/main.css'>
   </head>
   <body>
@@ -20,6 +21,15 @@
         Lorem ipsum whatever goes here.
       </p>
     </section>
-
+    <section id="oldpages">
+    <h3>Part One</h3>
+    <p class="story">Today I learned about SASS and it completely blew my mind</p>
+    <h3>Part Two</h3>
+    <p class="story">We got a project in which we had to implement SASS variables</p>
+    <h3>Part Three</h3>
+    <p class="story">I am super jazzed because this all makes a lot of sense!</p>
+    <h3>Part Four</h3>
+    <p class="story">I am going to go home and dream of SASS</p>
+  </section>
   </body>
 </html>
